<resources>
    <string name="app_name" translatable="false">TimeManagement</string>

    <!--    Common-->
    <string name="list_is_empty">List is empty.</string>

    <!--    New Task-->
    <string name="new_task">New task</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="error_save_task">Error savig task, try again later.</string>
    <string name="task_name_error">Task name should contain at least 1 symbol</string>
    <string name="subtask_name_error">Subtask name should contain at least 1 symbol</string>

    <!--    Task List-->
    <string name="task_list_header">Tasks</string>
    <string name="error_get_task_list">Failed to load task list</string>
    <string name="add_subtask">Add subtask</string>
    <string name="error_task_has_subtask">Not available for task with subtasks</string>

    <!--    Task View-->
    <string name="error_task_not_found">Task not found</string>
    <string name="error_task_removing">Error while removing task</string>
    <string name="time_gaps">Overall time</string>
    <string name="notification_task_running">Task is running</string>
    <string name="error_task_running">Error task running</string>
    <string name="error_task_stopping">Error task stopping</string>

    <!--    Filters-->
    <string name="filters_header">Filters</string>
    <string name="sort_header">Sort</string>
    <string name="sort_by_alphabet">By alphabet</string>
    <string name="sort_by_new">New first</string>
    <string name="sort_by_old">Old first</string>
    <string name="sort_by_short">Short first</string>
    <string name="sort_by_long">Long first</string>
    <string name="period_header">Period</string>
    <string name="period_since">Since</string>
    <string name="period_to">To</string>
</resources>
